--- a/Assignments/Vigneshwaran M (Team Member 1)/Assignment 1/index.html
+++ b/Assignments/Vigneshwaran M (Team Member 1)/Assignment 1/index.html
@@ -15,6 +15,9 @@
 <body>
 
 <div id="doc2" class="yui-t7">
+     <div class="img-sha">
+		<img src="profile.jpg" alt="profile">
+	</div>
 	<div id="inner">
 	
 		<div id="hd">
