--- a/Final Deliverables/Smart fashion recommender application/signup.html
+++ b/Final Deliverables/Smart fashion recommender application/signup.html
@@ -12,7 +12,7 @@
   <body>
     <div class="signup-box">
       <h1>Sign Up</h1>
-      <form action="action_page.html">
+      <form action="login.html">
         <label>First Name</label>
         <input type="text" placeholder="" />
         <label>Last Name</label>
